1. Collection API improvements. Part 3. [#70623]